--- a/src/app/deposit-modal/deposit-modal.component.html
+++ b/src/app/deposit-modal/deposit-modal.component.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
   <ion-title>Add Participant</ion-title>
   <ion-buttons slot="end">
-  <ion-button (click)="dismissModal()">Close</ion-button>
+   <ion-button color="danger" (click)="dismissModal()"><ion-icon name="close" ></ion-icon></ion-button>
   </ion-buttons>
   </ion-toolbar>
 </ion-header>
