--- a/src/app/update-modal/update-modal.component.html
+++ b/src/app/update-modal/update-modal.component.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
   <ion-title>Edit Participant</ion-title>
   <ion-buttons slot="end">
-  <ion-button (click)="dismissModal()">Close</ion-button>
+  <ion-button color="danger" (click)="dismissModal()"><ion-icon name="close" ></ion-icon></ion-button>
   </ion-buttons>
   </ion-toolbar>
 </ion-header>
@@ -42,7 +42,7 @@
       </ion-row>
       <ion-row>
         <ion-col>
-          <ion-button (click)="update()" [disabled]="!this.updateForm.valid" >update</ion-button>
+          <ion-button (click)="update()" [disabled]="!this.updateForm.valid">Modifier</ion-button>
         </ion-col>
       </ion-row>
    </form>
