--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -5,7 +5,6 @@
     </ion-title>
   </ion-toolbar>
 </ion-header>
-
 <ion-content >
   <ion-item>
       <ion-button color="success" (click)="openModal()">Add
@@ -13,13 +12,13 @@
      </ion-button>
   </ion-item>
     <ion-list>
-      <ion-item *ngFor="let User of allParticipantsAdded let i = index;" >
+      <ion-item *ngFor="let User of allParticipantsAdded ;let i = index;" >
         <ion-label >{{User.userLastName}}</ion-label>
         <ion-label >{{User.userFirstName}}</ion-label>
         <ion-label >{{User.phoneNumber}}</ion-label>
         <ion-label >{{User.userEmail}}</ion-label>
-        <ion-button color="danger"  (click)="deleteParticipant(i)"><ion-icon name="trash-outline"></ion-icon> </ion-button>
-        <ion-button (click)="update(User)"><ion-icon name="clipboard-outline" ></ion-icon></ion-button>
+        <ion-button color="danger" (click)="deleteParticipant(i)"><ion-icon name="trash-outline"></ion-icon> </ion-button>
+        <ion-button (click)="OpenUpdateModal(User)"><ion-icon name="clipboard-outline" ></ion-icon></ion-button>
       </ion-item>
       </ion-list>
   
